# gen-slide-chaper

./: README.md  pyproject.toml
src/gen_slide_chaper/: __init__.py
src/gen_slide_chaper/blender/: __init__.py
